src/mode/darkMode.scss
.app.dark {
  background: #1d1d1d;
  color: rgb(155, 155, 155);

  .chart-grid {
    stroke: rgba(228, 228, 228, 0.219);
  }

  .table-main {
    background: #111;
    color: rgb(155, 155, 155);

    .table-cell {
      background: #111;
      color: rgb(155, 155, 155);
    }
  }

  .navbar-main {
    color: #999;
    border-color: #333;

    .navbar-search {
      border-color: gray;

      .SearchInputContainer {
        background-color: red;
      }
    }

    .dropdown {
      background: #1d1d1d;

      .dropdown-item {
        color: rgb(155, 155, 155);

        &:hover {
          background-color: rgba(137, 61, 255, 0.2);
        }
      }
    }
  }

  .sidebar-main {
    background-color: #111;
    border-color: #333;

    .sidebar-top {
      .sidebar-logo {
        color: #999;
      }
    }

    .sidebar-header {
      .header-name {
        color: #999;
      }
    }

    ul {
      li,
      .sidebar-items {
        &:hover {
          background-color: rgba(137, 61, 255, 0.2);
        }
        .sidebar-icons {
          color: #999;

          .sidebar-name {
            &:hover {
              color: rgb(137, 61, 255);
            }
          }
        }

        .collapse__sublink {
          &:hover {
            background-color: none;
            color: black;
          }
        }
      }
    }

    .sidebar-bottom {
      .greetings {
        color: #999;
      }
    }
  }

  .data-table {
    color: gray;
    .data-grid {
      color: gray;
      border: none;

      .list-btn,
      .cell-status {
        color: gray;
        border: none;
      }
    }
  }
  input {
    background-color: transparent;
    color: white;
    outline: none;
  }

  .log-main {
    .content-title {
      color: #999;
    }
  }

  .student-main {
    .content-footer {
      .table {
        background: #111;
        color: rgb(155, 155, 155);

        .tableCell {
          background: #111;
          color: rgb(155, 155, 155);
        }
      }
    }
  }

  .log-content {
    background-color: #999;

    .accordion-main {
      background: #333;
      color: rgb(155, 155, 155);
    }
  }

  .accSettings-wrapper {
    .accSettings-content__left {
      background-color: #1d1d1d;
    }

    .accSettings-left__cancel {
      color: #999;
    }
  }
  .single-main {
    .footer-container {
      .footer-content-comment {
        background-color: #1d1d1d;
      }
    }
  }
}

